style: correctly align lift sets

--- a/src/ui/root/workouts/lift.module.css
+++ b/src/ui/root/workouts/lift.module.css
@@ -32,10 +32,10 @@
 }
 
 .set {
-  display: flex;
-  justify-content: center;
   align-items: center;
+  display: flex;
   gap: 7px;
+  width: 170px;
 }
 
 @media (prefers-color-scheme: light) {
@@ -46,7 +46,8 @@
 
 @media (max-width: 400px) {
   .set {
-    font-size: 10px !important;
+    font-size: 15px !important;
+    width: 155px;
   }
 
   .sets {
