--- a/src/ui/section/updated.module.css
+++ b/src/ui/section/updated.module.css
@@ -15,6 +15,7 @@
   align-items: center;
   justify-content: center;
   color: var(--success);
+  box-shadow: 0px 0px 15px rgba(18.8%, 80.8%, 45.9%, 0.1);
   border: 1px solid rgba(18.8%, 80.8%, 45.9%, 0.5);
   background-color: rgba(18.8%, 80.8%, 45.9%, 0.1);
   padding: 3px 10px;
